updated about page for readability, updated code for search possibly resolving rare layout bug

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -180,5 +180,5 @@ header.page-header {
         }
         div.trbox {
             color: #000000;
-            background: rgba(255, 255, 255, 0.65);
+            background: rgba(255, 255, 255, 0.85);
         }
